// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`List Component should render correctly 1`] = `
<View
  style={
    {
      "display": "flex",
      "flexDirection": "column",
      "paddingVertical": 3,
    }
  }
/>
`;

exports[`List Component should render the child component 1`] = `
<View
  style={
    {
      "display": "flex",
      "flexDirection": "column",
      "paddingVertical": 3,
    }
  }
>
  <Text
    collapsable={false}
    style={{}}
  >
    Mock
  </Text>
</View>
`;

exports[`ListItem Component should render correctly 1`] = `
<View
  style={
    {
      "backgroundColor": "transparent",
      "display": "flex",
      "flexDirection": "row",
      "marginBottom": 8,
    }
  }
>
  <View
    style={
      [
        {
          "flexDirection": "row",
          "width": "100%",
        },
        {
          "flex": 1,
        },
      ]
    }
  >
    <View
      style={
        {
          "flex": 1,
        }
      }
    >
      <View
        style={
          {
            "alignSelf": "flex-start",
          }
        }
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onLayout={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          pointerEvents="box-only"
          style={
            {
              "display": "flex",
              "flexDirection": "row",
              "minHeight": 50,
              "transform": [
                {
                  "scale": 1,
                },
              ],
            }
          }
        >
          <View
            style={
              [
                {
                  "flexDirection": "row",
                  "width": "100%",
                },
              ]
            }
          />
          <View
            style={
              [
                {
                  "backgroundColor": "transparent",
                  "bottom": 0,
                  "left": 0,
                  "overflow": "hidden",
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                },
                undefined,
              ]
            }
          />
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`ListItem Component should render the child component 1`] = `
<View
  style={
    {
      "backgroundColor": "transparent",
      "display": "flex",
      "flexDirection": "row",
      "marginBottom": 8,
    }
  }
>
  <View
    style={
      [
        {
          "flexDirection": "row",
          "width": "100%",
        },
        {
          "flex": 1,
        },
      ]
    }
  >
    <View
      style={
        {
          "flex": 1,
        }
      }
    >
      <View
        style={
          {
            "alignSelf": "flex-start",
          }
        }
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onLayout={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          pointerEvents="box-only"
          style={
            {
              "display": "flex",
              "flexDirection": "row",
              "minHeight": 50,
              "transform": [
                {
                  "scale": 1,
                },
              ],
            }
          }
        >
          <View
            style={
              [
                {
                  "flexDirection": "row",
                  "width": "100%",
                },
              ]
            }
          >
            <Text
              collapsable={false}
              style={{}}
            >
              Mock
            </Text>
          </View>
          <View
            style={
              [
                {
                  "backgroundColor": "transparent",
                  "bottom": 0,
                  "left": 0,
                  "overflow": "hidden",
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                },
                undefined,
              ]
            }
          />
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`ListItemText Component should render correctly 1`] = `
<View
  style={
    {
      "alignItems": "flex-start",
      "display": "flex",
      "flex": 1,
      "justifyContent": "center",
      "paddingBottom": 5,
      "paddingLeft": 15,
      "paddingRight": 15,
      "paddingTop": 5,
    }
  }
/>
`;
